--- a/public/assets/scss/_sections.scss
+++ b/public/assets/scss/_sections.scss
@@ -251,7 +251,8 @@
 .orther-overlay {
     position: absolute;
     inset: 0;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.2) 100%);
+    background-color: #5997FF;
+    mix-blend-mode: hue;
     pointer-events: none;
 }
 
