--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1667,6 +1667,39 @@ button.animate-btn::after,
   font-size: 20px;
 }
 
+/* Bootstrap Spinner Animation */
+.spinner-border {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  vertical-align: text-bottom;
+  border: 0.125em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border 0.75s linear infinite;
+  animation: spinner-border 0.75s linear infinite;
+}
+
+.spinner-border-sm {
+  width: 0.75rem;
+  height: 0.75rem;
+  border-width: 0.1em;
+}
+
+@keyframes spinner-border {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spinner-border {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 /*------------ form ---------------- */
 /* ---------------------------------------------------------
     * Name: Vemus - Jewelry Ecommerce HTML Template
